# LavenderTown

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .markdownlint.jsonc  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  main.c
.github/workflows/: linter.yml
lib/: pdcurses.lib
src/: CMakeLists.txt  aabb.c  aabb.h  cursor.c  cursor.h  drawing.c  drawing.h  grid.c  grid.h  input.c  input.h  main.c  player.c  player.h  playerWindows.c  playerWindows.h  random.c  random.h  setLocaleUTF8.c  setLocaleUTF8.h  ship.c  ship.h  state.h  vector.c  vector.h  windows.c  windows.h
src/de/lavendertown/: Main.java
src/events/: arrangeShips.c  arrangeShips.h  attackMode.c  attackMode.h  createPlayers.c  createPlayers.h  drawArrangeShips.c  drawArrangeShips.h  drawAttackMode.c  drawAttackMode.h  drawCreatePlayers.c  drawCreatePlayers.h  switchPlayer.c  switchPlayer.h
src/events/arrangeMode/: arrangeShips.c  arrangeShips.h  drawArrangeShips.c  drawArrangeShips.h
src/events/attackMode/: attackPlayer.c  attackPlayer.h  drawAttackPlayer.c  drawAttackPlayer.h  drawSwitchAttackingPlayer.c  drawSwitchAttackingPlayer.h  switchAttackingPlayer.c  switchAttackingPlayer.h
src/events/createMode/: createPlayers.c  createPlayers.h  drawCreatePlayers.c  drawCreatePlayers.h
src/events/endScreen/: drawEndScreen.c  drawEndScreen.h  endScreen.c  endScreen.h
src/util/: aabb.h  drawing.c  drawing.h  random.h  vector.h
